<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:name="Main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/countryEdit"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:gravity="center"
            android:hint="@string/countryName"
            android:autofillHints="Country Name" />
        <EditText
            android:id="@+id/capitalCityEdit"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:gravity="center"
            android:hint="@string/cityName"
            android:autofillHints="Capital City Name" />
        <EditText
            android:id="@+id/LatitudeEdit"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:gravity="center"
            android:hint="@string/latitude"
            android:autofillHints="number" />

        <EditText
            android:id="@+id/et_text_input"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:gravity="center"
            android:hint="@string/longitude"
            android:autofillHints="number"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/addCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/googleMap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976"
            android:theme="@style/Theme.MaterialComponents.Light"/>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="410dp"
        android:layout_height="62dp"
        style="@style/Widget.AppCompat.Button.Colored"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

