<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpeechActivity">

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="407dp"
        android:layout_height="57dp"
        tools:ignore="MissingConstraints"
        style="@style/Widget.AppCompat.Button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context=".MainActivity">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_stt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listen"
            android:theme="@style/Theme.MaterialComponents.Light" />

        <EditText
            android:id="@+id/et_text_input"
            android:layout_width="351dp"
            android:layout_height="400dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:hint="@string/TSS"
            android:theme="@style/Theme.MaterialComponents.Light"
            android:textColor="@color/colorAccent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_tts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speak"
            android:theme="@style/Theme.MaterialComponents.Light" />
    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="410dp"
        android:layout_height="62dp"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/back_bottom_navigation"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>